# host-board-aim-assist

./: .gitignore  PROJECT_INTRO.md  README.md
board/ffmpeg_video_infer/: CLOCK_OFFSET_TIME_CALIBRATION.md  CMakeLists.txt  CODEX_HANDOFF_SUMMARY.md  README.md  UDP_RESULT_JSON_FIELDS.md
board/ffmpeg_video_infer/include/: clock_offset_server.hpp  detection_udp_sender.hpp  project_logging.hpp  video_infer_app.hpp  video_infer_options.hpp
board/ffmpeg_video_infer/src/: clock_offset_server.cpp  detection_udp_sender.cpp  main.cpp  video_infer_app.cpp
board/rknn_infer/infer_v6_cpp/: CMakeLists.txt  README.md
board/rknn_infer/infer_v6_cpp/include/: yolov6_rknn.hpp
board/rknn_infer/infer_v6_cpp/src/: main.cpp  yolov6_rknn.cpp
board/rknn_infer/infer_v6_python/: yolov6_rknn_infer.py
board/udp_client_recv/: CMakeLists.txt
board/udp_client_recv/host_server/: main.cpp
board/udp_client_recv/include/: latest_frame_buffer.h  receiver.h
board/udp_client_recv/src/: latest_frame_buffer.cpp  main.cpp  receiver.cpp
host/: CMakeLists.txt  README.md  TIME_CALIBRATION.md  总结.md
host/include/: app.hpp  mouse_driver.hpp  types.hpp  udp_receiver.hpp
host/include/logging/: logger.hpp
host/include/profiling/: clock_offset_client.hpp  timing_profiler.hpp
host/include/sender/: ffmpeg_command_builder.hpp  ffmpeg_process.hpp  ffmpeg_sender_options.hpp  ffmpeg_sender_service.hpp
host/src/: app.cpp  main.cpp  udp_receiver.cpp
host/src/logging/: logger.cpp
host/src/profiling/: clock_offset_client.cpp  timing_profiler.cpp
host/src/sender/: ffmpeg_command_builder.cpp  ffmpeg_process.cpp  ffmpeg_sender_service.cpp
